# ovh-rs

./: .travis.yml  CONTRIBUTE.md  Cargo.toml  Config.toml.dist  Config.toml.enc  Config2.toml.enc  LICENSE  README.md  appveyor.yml  launch.sh
src/: client.rs  config.rs  lib.rs
