[package]
name = "ovh"
version = "0.2.0"
authors = ["Adrien Bensaibi <olinkl@stayfoc.us>"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/olinkl/ovh-rs"
homepage = "https://github.com/olinkl/ovh-rs"
keywords = ["ovh"]
description = """
A native wrapper for OVH's APIs that handle request signing.
"""

[features]
default = ["reqwest"]

[dependencies]
serde = "^0.9"
serde_json = "^0.9"
chrono = "^0.2"
rust-crypto = "^0.2"
log = "0.3.6"
toml = "^0.2"
env_logger = "^0.4"

[dependencies.hyper]
version = "^0.10"

[dependencies.reqwest]
version = "^0.4"
optional = true

[dependencies.curl]
version = "0.4.5"
optional = true
